--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
+    "angularfire2": "^5.1.1",
     "babel-cli": "6.24.1",
     "babel-core": "6.25.0",
     "babel-loader": "7.1.1",
@@ -20,10 +21,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "chart.js": "^2.7.3",
     "css-loader": "0.28.4",
     "express": "^4.16.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "firebase": "4.2.0",
+    "firebase": "^4.2.0",
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
@@ -35,6 +37,8 @@
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
+    "react-router-redux": "^4.0.8",
+    "react-tabs": "^2.3.0",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
