--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "1.5.2",
     "babel-preset-react": "6.24.1",
+    "canvasjs": "^1.8.1",
     "chart.js": "^2.7.3",
     "css-loader": "0.28.4",
     "express": "^4.16.4",
@@ -29,16 +30,20 @@
     "moment": "2.18.1",
     "node-sass": "4.5.3",
     "normalize.css": "7.0.0",
+    "plotly.js": "^1.42.5",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
     "react-dates": "12.7.0",
     "react-dom": "16.0.0",
+    "react-easy-chart": "^1.0.0",
+    "react-linechart": "^1.1.12",
     "react-modal": "2.2.2",
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "^4.0.8",
     "react-tabs": "^2.3.0",
+    "recharts": "^1.4.1",
     "redux": "3.7.2",
     "sass-loader": "6.0.6",
     "style-loader": "0.18.2",
