--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-redux": "5.0.5",
     "react-router-dom": "4.2.2",
     "react-router-redux": "^4.0.8",
+    "react-safe": "^1.3.0",
     "react-tabs": "^2.3.0",
     "recharts": "^1.4.1",
     "redux": "3.7.2",
